err/neuronpy.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/neuronpy'...
Listing './lib/python3.5/site-packages/neuronpy/graphics'...
Compiling './lib/python3.5/site-packages/neuronpy/graphics/spikeplot.py'...
***   File "./lib/python3.5/site-packages/neuronpy/graphics/spikeplot.py", line 277
    print ex
           ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/neuronpy/math'...
Listing './lib/python3.5/site-packages/neuronpy/nrnobjects'...
Listing './lib/python3.5/site-packages/neuronpy/util'...
Compiling './lib/python3.5/site-packages/neuronpy/util/dictdb.py'...
***   File "./lib/python3.5/site-packages/neuronpy/util/dictdb.py", line 293
    print warning
                ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/neuronpy/util/hgutil.py'...
***   File "./lib/python3.5/site-packages/neuronpy/util/hgutil.py", line 171
    print ex
           ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/neuronpy/util/hoctranslate.py'...
***   File "./lib/python3.5/site-packages/neuronpy/util/hoctranslate.py", line 134
    print warnstr
                ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/neuronpy/util/paraminit.py'...
***   File "./lib/python3.5/site-packages/neuronpy/util/paraminit.py", line 119
    except IOError as (errno, strerror):
                      ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/neuronpy/util/vartest.py'...
***   File "./lib/python3.5/site-packages/neuronpy/util/vartest.py", line 95
    print '%(a)s needs to be > %f.'%{'a':name, 'b':val}
                                  ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/neuronpy-0.1.6.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
